--- a/nextflow.config
+++ b/nextflow.config
@@ -1,3 +1,4 @@
+nextflow.enable.dsl=1
 params {
   reads = "$baseDir/test-data/fastq/**_{R1,R2}_cdh_lzw_trim30_PF.fastq"
   reference = "$baseDir/test-data/fastas/**_contigs_test.fasta"
